--- a/public/index.html
+++ b/public/index.html
@@ -2,25 +2,23 @@
 <html lang="en">
 <head>
     <meta charset="utf-8"/>
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico"/>
+    <link rel="icon" href="https://m.media-amazon.com/images/G/01/imdb/images/social/imdb_logo.png"/>
     <meta name="viewport" content="width=device-width, initial-scale=1"/>
     <meta name="theme-color" content="#000000"/>
-    <meta
-            name="description"
-            content="Web site created using create-react-app"
-    />
+    <meta name="description"
+          content="IMDb is the world's most popular and authoritative source for movie, TV and celebrity content. Find ratings and reviews for the newest movie and TV shows. Get personalized recommendations, and learn where to watch across hundreds of streaming providers.">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Nunito:wght@300;400;500;600;700;800;900&display=swap"
           rel="stylesheet">
 
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png"/>
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json"/>
-    <title>IMDB clone</title>
+    <title>IMDb: Ratings, Reviews, and Where to Watch the Best Movies & TV Shows</title>
 </head>
 
 <body>
 <noscript>You need to enable JavaScript to run this app.</noscript>
+
 <div id="root"></div>
 </body>
 </html>
+
